Updated title, author info, and recompiled main.pdf

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -34,16 +34,16 @@
 }
 
 % Title and author information
-\title{Your Paper Title Here}
+\title{Language Bias in Wikipedia}
 \subtitle{CPSC-298 Wikipedia Governance Research Project}
 
-\author{Your Name}
+\author{Cole Tamashiro, Michael Tamura, Kody Wong}
 \affiliation{%
-  \institution{Your University}
-  \city{Your City}
+  \institution{Chapman University}
+  \city{Orange, California}
   \country{USA}
 }
-\email{your.email@university.edu}
+\email{ctamashiro@chapman.edu, mtamura@chapman.edu, kowong@chapman.edu}
 
 % Abstract
 \begin{abstract}
