Updated paper with new research questions and corrected section structure

--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -1,4 +1,1 @@
-% Abstract: 150–250 words summarizing your entire paper
-% Include: problem, methods, key findings, contribution
-
-Our research investigates how language bias shapes the information presented across different language editions of Wikipedia. While Wikipedia strives to be a neutral and global knowledge platform, articles often vary significantly in tone, emphasis, and detail depending on the language in which they are written. Using the Wikipedia API, we collected 500-character summaries from various topics—including politics, history, and science—in English, Japanese, and Spanish. By comparing the outputs, we observed that certain details and perspectives were emphasized differently between languages, revealing cultural and linguistic biases embedded within the content. Although our analysis was primarily qualitative, the findings show that Wikipedia is not a direct translation across languages but rather a set of culturally shaped narratives. Understanding these differences is important because language bias can influence global access to reliable information and reinforce unequal knowledge representation online. Our project highlights the need for continued awareness and technical methods to detect and mitigate language bias in multilingual digital platforms.
+Wikipedia offers global access to knowledge across more than 300 languages, but substantial evidence shows that articles differ in tone, emphasis, and detail across language editions. This study investigates how historical topics are represented differently across English, Japanese, and Spanish Wikipedia by analyzing short summaries retrieved through the Wikipedia API. We operationalize multilingual variation through three measurable proxies: word count, word choice, and topical emphasis. Our findings show that English summaries provide the most contextual detail, Spanish summaries often emphasize political or institutional actors, and Japanese summaries favor concise and neutral phrasing. These consistent patterns demonstrate that linguistic and cultural factors shape how historical information is framed across languages. The study contributes a reproducible, proxy-based methodology for detecting multilingual variation and highlights the need for cross-lingual coordination to promote equitable global knowledge representation.
