--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -1,16 +1,12 @@
-% Discussion
-% Interpret your results, discuss implications, acknowledge limitations
-
-\label{sec:discussion}
 
 \subsection{Interpretation of Results}
 
-The results of our analysis show that Wikipedia’s multilingual articles are not simple translations of one another but reflect distinct linguistic and cultural framing. Across English, Japanese, and Spanish, the same topics differed in tone, detail, and emphasis—particularly in politically or historically sensitive subjects. These differences suggest that editorial decisions, community norms, and cultural context shape how knowledge is represented. Our findings answer the main research question by confirming that language bias significantly influences how information is structured and presented across languages, even within a supposedly neutral platform like Wikipedia.
+Our results confirm that multilingual Wikipedia summaries reflect culturally and linguistically distinct framing rather than direct translation. English summaries tended to provide broader contextual detail, Spanish summaries often highlighted institutional or political elements, and Japanese summaries favored concise structural information. These differences show that historical narratives are constructed differently across language editions, shaped by editorial norms and cultural communication styles.
 
 \subsection{Implications}
 
-These findings have important implications for how readers interpret global information sources. For Wikipedia, understanding the extent of language bias highlights the need for greater cross-lingual collaboration among editors and tools that flag inconsistencies across versions. For researchers, this study underscores the value of examining multilingual content to uncover systemic bias. In practice, our results demonstrate the importance of critical digital literacy—users should recognize that the “neutral” presentation of facts may differ based on the language they read.
+These findings have implications for how global audiences consume historical information. Readers relying on different language editions may receive substantively different interpretations of major historical events. For Wikipedia, this underscores the need for improved cross-language alignment tools and awareness among editors. For researchers, the results demonstrate the value of proxy-based multilingual comparison for detecting subtle forms of linguistic bias.
 
 \subsection{Limitations}
 
-Our analysis was limited in both scale and automation. The Wikipedia API program retrieved only short 500-character summaries, which capture limited context. The study also compared a small number of languages, meaning our findings cannot be generalized across all of Wikipedia.
+This study is limited by its use of short 500-character summaries, which provide only a narrow window into full article content. The number of topics compared was also small, and no translation normalization or automated linguistic analysis was used. Future work could expand the dataset, incorporate NLP methods, or compare full article structures to achieve a deeper understanding of cross-lingual historical framing.
