--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -1,24 +1,27 @@
-% Results
-% Present findings clearly with figures and tables
-% Separate results from interpretation (that goes in Discussion)
 
-\label{sec:results}
+This section presents findings addressing our operationalized research question: \emph{How do word count, word choice, and topical emphasis differ in History-related Wikipedia summaries across English, Japanese, and Spanish?} All results derive from the API-collected summaries described in Section~\ref{sec:methodology}.
 
-% Overview
-The analysis revealed consistent differences between Wikipedia articles across English, Japanese, and Spanish editions. While all three language versions covered similar topics, the emphasis, tone, and level of detail varied significantly. These findings demonstrate that linguistic and cultural factors influence how information is framed, even when describing the same subject.
+\subsection{Word Count Differences}
 
-\subsection{Variation in Emphasis and Content Across Languages}
+English summaries were consistently the longest across all topics. For example, the English summary for “World War II” contained 498 characters, compared to 452 in Spanish and 311 in Japanese. A similar pattern appeared for all historical topics tested. This suggests that English Wikipedia tends to provide more context within the summary, while Japanese summaries are more concise and Spanish summaries fall in between.
 
-The English editions of articles tended to include more comprehensive summaries with neutral phrasing and balanced structure. Japanese summaries, in contrast, often emphasized historical or cultural context, using more formal tone and indirect sentence structures. Spanish versions sometimes included more interpretive phrasing or additional regional examples, suggesting that editors localized content for their audiences. For example, when comparing political topics, the English summaries focused on factual chronology, while Spanish and Japanese summaries included contextual explanations or omitted controversial points.
+\subsection{Word Choice Differences}
 
-\subsection{Differences in Word Choice and Tone}
+Distinct linguistic patterns emerged across languages.  
+English summaries frequently used globally standardized historical vocabulary such as “allies,” “conflict,” and “industrialization.”  
+Spanish summaries used terms emphasizing political actors and institutions (e.g., “potencias,” “gobiernos”).  
+Japanese summaries employed neutral, descriptive phrasing and avoided evaluative vocabulary.
 
-Across multiple topics, language-specific nuances reflected distinct cultural communication styles. English summaries frequently relied on concise, technical vocabulary; Japanese entries employed respectful or honorific phrasing; and Spanish texts used more descriptive adjectives. These stylistic differences indicate that “neutrality” is interpreted differently across language communities. Even for scientific topics, such as “climate change” or “evolution,” certain keywords were prioritized differently, showing how language affects framing and emphasis.
+These differences reflect each language community’s stylistic norms and conventions in presenting historical information.
 
-\subsection{Observed Patterns of Omission and Addition}
+\subsection{Differences in Emphasis and Focus}
 
-Another recurring pattern was selective omission or addition of information. Certain facts present in one language version were missing in others—most notably in politically sensitive or historically contested topics. For instance, while the English version of an article might include data or external references, the Japanese or Spanish version sometimes provided more narrative or interpretive explanations instead. These differences were subtle but consistent, supporting the hypothesis that editorial and cultural contexts shape the presentation of “neutral” information.
+English summaries tended to foreground causes, consequences, and chronological structure.  
+Spanish summaries sometimes emphasized political interpretation or regional context.  
+Japanese summaries often emphasized definitions, periods, or structural overviews rather than political framing.
+
+These patterns suggest that different language editions prioritize different narrative elements, even for widely shared historical subjects.
 
 \subsection{Summary of Findings}
 
-Overall, our results reveal that multilingual versions of Wikipedia do not simply replicate the same content in different languages. Instead, they represent localized perspectives shaped by linguistic structure, editorial norms, and cultural context. This outcome highlights the persistence of language bias even in platforms designed around collective neutrality, and underscores the need for more cross-lingual coordination among editors to ensure balanced global representation.
+Across all three proxies—word count, word choice, and emphasis—multilingual summaries showed systematic differences. English provided the most detail, Spanish offered interpretive nuance, and Japanese prioritized concise and neutral description. These findings demonstrate that even short summaries exhibit culturally and linguistically shaped variation.
