--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -1,11 +1,6 @@
-% Conclusion
-% Briefly summarize: problem, approach, findings, contributions
-% End with a forward-looking statement
 
-\label{sec:conclusion}
+This study examined how Wikipedia’s multilingual editions present historical topics differently by analyzing 500-character summaries in English, Japanese, and Spanish. Using word count, word choice, and topical emphasis as measurable proxies, we identified systematic differences across languages. English summaries provided the greatest level of detail, Spanish summaries offered more interpretive framing, and Japanese summaries emphasized concise and neutral description.
 
-This research investigated how language bias influences the content and interpretation of Wikipedia articles across different language editions. Although Wikipedia is built on the principle of neutrality, our analysis revealed noticeable differences in emphasis, tone, and detail between English, Japanese, and Spanish versions of the same topics. Using the Wikipedia API, we collected and compared summaries to illustrate how cultural and linguistic contexts shape what is presented as “neutral” knowledge. 
+These findings show that even short summaries reflect culturally shaped editorial choices. Wikipedia, despite its neutrality policy, presents distinct linguistic versions of history depending on the language edition. Our work provides a reproducible framework for detecting such differences using simple API-based methods.
 
-Our findings demonstrate that Wikipedia is not simply translated content but a reflection of localized editorial norms and community perspectives. This highlights the importance of considering linguistic diversity when evaluating information reliability and accessibility. By showcasing how even factual entries can differ by language, this project contributes to the broader understanding of systemic and cultural bias in online information platforms. 
-
-Future work could expand this approach by integrating natural language processing tools to quantify bias across a larger dataset and by exploring strategies for promoting greater consistency and inclusivity in multilingual digital knowledge systems.
+Future research should expand the scale of analysis, incorporate automated translation alignment or NLP-based metrics, and explore full-article structural differences to better understand multilingual knowledge representation.
