--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -1,37 +1,28 @@
-% Introduction
-% Structure: Problem/Motivation -> Background -> Research Questions -> Contributions -> Paper Outline
 
-\label{sec:introduction}
-
-% Motivating example or opening
 Wikipedia is one of the most widely used information platforms in the world, available in over 300 languages and read by millions of users daily. Despite its mission of neutrality and open collaboration, numerous studies and examples have shown that the way information is written and presented can differ depending on the language edition. These differences raise questions about how cultural and linguistic contexts influence the perceived objectivity of shared knowledge.
 
-% The problem/question
-This paper investigates the presence of language bias within Wikipedia articles across different languages. Although Wikipedia strives to maintain a neutral point of view, the content, tone, and emphasis of articles can vary significantly depending on the language of publication. Such inconsistencies may alter how users understand global topics, particularly in fields like politics, history, and science.
+This paper focuses on multilingual differences within Wikipedia, particularly in the domain of historical topics. While Wikipedia strives for a neutral point of view, articles about historical events and periods often vary in tone, emphasis, and content depth across different languages. These inconsistencies may influence how readers understand major historical topics, shaping perceptions in ways that reflect broader cultural or editorial priorities.
 
-% Why it matters
-Understanding language bias in multilingual platforms is critical because it affects access to accurate and balanced information worldwide. When information differs across language editions, readers may receive culturally filtered or incomplete perspectives. Addressing these discrepancies can promote greater transparency, equity, and inclusivity in digital knowledge sharing.
+Understanding these linguistic differences is important because Wikipedia serves as a foundational information source for users around the world. When articles differ across language editions, readers may receive culturally filtered or uneven perspectives on shared global history. A systematic examination of these differences helps reveal how language influences access to balanced and accurate information.
 
-% Research questions
-This paper investigates the following research questions:
-\begin{enumerate}
-    \item What Wikipedia topics show the most variation in language (e.g., politics, history, science)?
-    \item How does language bias affect access to reliable information across underrepresented languages?
-    \item How do editors’ demographics and linguistic backgrounds shape the content and tone of Wikipedia articles?
-\end{enumerate}
+This study distinguishes between the broader motivating research question and the specific operationalized question that can be directly measured with our dataset:
 
-% Contributions
-The main contributions of this work are:
+\textbf{Motivating Research Question:}  
+\emph{How do different language editions of Wikipedia shape the way historical topics are presented across cultures?}
+
+\textbf{Operationalized Research Question:}  
+\emph{How do word count, word choice, and content emphasis differ in History-related Wikipedia summaries across English, Japanese, and Spanish, as retrieved through the Python Wikipedia API?}
+
+The main contributions of this work are as follows:
 \begin{itemize}
-    \item A comparative analysis of Wikipedia articles across three language editions (English, Japanese, and Spanish) using the Wikipedia API.
-    \item Evidence demonstrating how linguistic and cultural differences influence tone and emphasis in multilingual content.
-    \item A framework for future computational analysis of bias using natural language processing tools.
+    \item A multilingual comparison of History-related Wikipedia summaries in English, Japanese, and Spanish.
+    \item Empirical evidence showing how linguistic and cultural factors influence tone, detail, and emphasis across language editions.
+    \item A proxy-based framework for future computational measurement of multilingual Wikipedia bias.
 \end{itemize}
 
-% Paper outline
 The rest of this paper is organized as follows. 
-Section~\ref{sec:related} reviews related research on Wikipedia bias and multilingual governance. 
-Section~\ref{sec:methodology} describes our data collection and comparison approach using the Wikipedia API. 
-Section~\ref{sec:results} presents our main findings. 
-Section~\ref{sec:discussion} discusses the broader implications and limitations of our study. 
-Finally, Section~\ref{sec:conclusion} concludes and outlines directions for future work.
+Section~\ref{sec:related} reviews related work on multilingual Wikipedia bias and governance. 
+Section~\ref{sec:methodology} describes our data collection process and proxy-based comparison approach. 
+Section~\ref{sec:results} presents our empirical findings with respect to our operationalized research question. 
+Section~\ref{sec:discussion} discusses broader implications, limitations, and interpretive considerations. 
+Finally, Section~\ref{sec:conclusion} summarizes our conclusions and notes directions for future work.
